Fix line spacing in body

--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -84,7 +84,8 @@
 	max-width: 700px;
 }
 
-.body > p {
+.body-stretch {
+	@extend .body;
 	letter-spacing: 5px;
 }
 
